PROJECT(gtk3-tutorial)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FIND_PACKAGE(PkgConfig REQUIRED)
PKG_CHECK_MODULES(GTK3 REQUIRED gtk+-3.0)
PKG_CHECK_MODULES(WEBKIT2GTK REQUIRED webkit2gtk-4.0)
PKG_CHECK_MODULES(GSTREAMER REQUIRED gstreamer-1.0)
PKG_CHECK_MODULES(GSTREAMERVIDEO REQUIRED gstreamer-video-1.0)

INCLUDE_DIRECTORIES(${GTK3_INCLUDE_DIRS} ${WEBKIT2GTK_INCLUDE_DIRS} ${GSTREAMERVIDEO_INCLUDE_DIRS} ${GSTREAMER_INCLUDE_DIRS})
LINK_DIRECTORIES(${GTK3_LIBRARY_DIRS} ${WEBKIT2GTK_LIBRARY_DIRS} ${GSTREAMERVIDEO_LIBRARY_DIRS} ${GSTREAMER_LIBRARY_DIRS})
ADD_DEFINITIONS(${GTK3_CFLAGS_OTHER})

ADD_EXECUTABLE(example-0 example-0.c)
TARGET_LINK_LIBRARIES(example-0 ${GTK3_LIBRARIES})

ADD_EXECUTABLE(example-1 example-1.c)
TARGET_LINK_LIBRARIES(example-1 ${GTK3_LIBRARIES})

ADD_EXECUTABLE(example-2 example-2.c)
TARGET_LINK_LIBRARIES(example-2 ${GTK3_LIBRARIES})

ADD_EXECUTABLE(one-window-browser one-window-browser.c)
TARGET_LINK_LIBRARIES(one-window-browser ${WEBKIT2GTK_LIBRARIES} ${GTK3_LIBRARIES})

ADD_EXECUTABLE(basic-tutorial-5 basic-tutorial-5.c)
TARGET_LINK_LIBRARIES(basic-tutorial-5 ${GSTREAMERVIDEO_LIBRARIES} ${GSTREAMER_LIBRARIES} ${GTK3_LIBRARIES})

ADD_EXECUTABLE(basic-tutorial-5-wayland basic-tutorial-5-wayland.c)
TARGET_LINK_LIBRARIES(basic-tutorial-5-wayland ${GSTREAMERVIDEO_LIBRARIES} ${GSTREAMER_LIBRARIES} ${GTK3_LIBRARIES})
